# pokedex

./: README.md  pyproject.toml
assets/: demo.mov
pokedex/: cli.py
